made some changes

--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
     <h3 class="chart-title">Last 7 Days</h3>
     <canvas id="trendChart"></canvas>
   </section>
-
   <!-- Activity Log -->
   <section class="log-section">
+    <div><p class="para">Quick Log</p></div>
+    <div><p class="para"><a href="" class="link-text">View All → </a></p></div>
     <div class="first-div">
       <div class="first-div-1">
         <i class="fas fa-leaf leaf-icon"></i>
@@ -94,6 +95,17 @@
         <p>You saved</p>
       </div>
     </div>
+  </section>
+
+  <section>
+    <div>
+        <i class="fas fa-home home-icon"></i>
+        <p>Home</p>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
   </section>
 
   <!-- Chart.js + Your Script -->
