--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
     <h3 class="chart-title">Last 7 Days</h3>
     <canvas id="trendChart"></canvas>
   </section>
+
+  <div class="quick-log"><div><p class="para">Quick Log</p></div>
+    <div><p class="para"><a href="" class="link-text">View All → </a></p></div>
+    </div>
   <!-- Activity Log -->
   <section class="log-section">
-    <div><p class="para">Quick Log</p></div>
-    <div><p class="para"><a href="" class="link-text">View All → </a></p></div>
     <div class="first-div">
       <div class="first-div-1">
         <i class="fas fa-leaf leaf-icon"></i>
