updated the icon boxes

--- a/index.html
+++ b/index.html
@@ -79,29 +79,29 @@
   <section class="log-section">
     <div class="first-div">
       <div class="first-div-1">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-utensils leaf-icon" ></i>
+        <p>Food</p>
       </div>
       <div class="first-div-2">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-car-side leaf-icon"></i> 
+        <p>Transport</p>
       </div>
     </div>
     <div class="second-div">
       <div class="second-div-1">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-bolt leaf-icon"></i> 
+        <p>Energy</p>
       </div>
       <div class="second-div-2">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-shopping-bag leaf-icon"></i>
+        <p>Shopping</p>
       </div>
     </div>
   </section>
 
   <section class="links">
     <div>
-        <a href="" class="the-link"><i class="fas fa-home home-icon"></i>
+        <a href="" class="the-link"><i class="fas fa-home home-icon "></i>
         <p>Home</p>
         </a>
     </div>
