--- a/test.html
+++ b/test.html
@@ -76,22 +76,22 @@
   <section class="log-section">
     <div class="first-div">
       <div class="first-div-1">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-utensils"></i>
+        <p>Food</p>
       </div>
       <div class="first-div-2">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+       <i class="fas fa-car-side"></i> 
+        <p>Transport</p>
       </div>
     </div>
     <div class="second-div">
       <div class="second-div-1">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-bolt"></i> 
+        <p>energy</p>
       </div>
       <div class="second-div-2">
-        <i class="fas fa-leaf leaf-icon"></i>
-        <p>You saved</p>
+        <i class="fas fa-shopping-bag"></i>
+        <p>shopping</p>
       </div>
     </div>
   </section>
