--- a/index.html
+++ b/index.html
@@ -101,27 +101,27 @@
 
   <section class="links">
     <div>
-        <a href="" class="the-link"><i class="fas fa-home home-icon "></i>
+        <a href="index.html" class="the-link"><i class="fas fa-home home-icon "></i>
         <p>Home</p>
         </a>
     </div>
     <div>
-        <a href="" class="the-link"><i class="fas fa-stream"></i>
+        <a href="log.html" class="the-link"><i class="fas fa-stream"></i>
         <p>Log</p>
         </a>
     </div>
     <div>
-        <a href="" class="the-link"><i class="fas fa-lightbulb"></i>
+        <a href="plan.html" class="the-link"><i class="fas fa-lightbulb"></i>
         <p>Plan</p>
         </a>
     </div>
     <div>
-        <a href="" class="the-link"><i class="fas fa-people-group"></i>
+        <a href="community.html" class="the-link"><i class="fas fa-people-group"></i>
         <p>community</p>
         </a>
     </div>
   <div>
-  <a href="" class="the-link">
+  <a href="report.html" class="the-link">
     <i class="fas fa-chart-bar"></i>
     <p>Report</p>
   </a>
