--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </section>
 
   <div class="quick-log"><div><p class="para">Quick Log</p></div>
-    <div><p class="para"><a href="" class="link-text">View All → </a></p></div>
+    <div><p class="para"><a href="log.html" class="link-text">View All<strong> →</strong></a></p></div>
     </div>
   <!-- Activity Log -->
   <section class="log-section">
