made some changes to the log.html

--- a/log.html
+++ b/log.html
@@ -90,7 +90,7 @@
           <div class="activity-card">
              <div class="card-header">
                 <span class="item-name" style="font-weight: 700; font-size: small;">Vegetarian Meal</span>
-                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800;" >Low Impact</span>
+                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800;" >Low Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -100,7 +100,7 @@
           <div class="activity-card">
              <div class="card-header">
                 <span class="item-name" style="font-weight: 700; font-size: small;">Vegan Meal</span>
-                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800">High Impact</span>
+                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800">High Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -117,7 +117,7 @@
       <!-- Card 1 -->
          <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;"> Beef Meal</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Car Trip</span>
                 <span class="impact-type" id="impact1" style="color: orange; font-size: 11.5px; font-weight: 800;">Medium</span>
             </div>
                 <div class="card-footer">
@@ -128,7 +128,7 @@
 
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Chiken Meal</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Bus Trip</span>
                 <span class="impact-type" id="impact1" style="color: orange; font-size: 11.5px; font-weight: 800;">Medium</span>
             </div>
                 <div class="card-footer">
@@ -139,8 +139,8 @@
          </div>
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Vegetarian Meal</span>
-                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800;" >Low Impact</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Bike Ride</span>
+                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800;" >Low Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -149,8 +149,8 @@
          </div>
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Vegan Meal</span>
-                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800">High Impact</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Walking</span>
+                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800">No Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -165,7 +165,7 @@
     <div class="activity-grid"> 
      <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;"> Beef Meal</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Light/hr</span>
                 <span class="impact-type" id="impact1" style="color: orange; font-size: 11.5px; font-weight: 800;">Medium</span>
             </div>
                 <div class="card-footer">
@@ -176,7 +176,7 @@
 
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Chiken Meal</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Devices/hr</span>
                 <span class="impact-type" id="impact1" style="color: orange; font-size: 11.5px; font-weight: 800;">Medium</span>
             </div>
                 <div class="card-footer">
@@ -187,8 +187,8 @@
          </div>
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Vegetarian Meal</span>
-                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800;" >Low Impact</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">AC Usage/hr</span>
+                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800;" >High Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -197,8 +197,8 @@
          </div>
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Vegan Meal</span>
-                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800">High Impact</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Heating</span>
+                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800">High Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -213,7 +213,7 @@
     <div class="activity-grid"> 
     <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;"> Beef Meal</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">New Clothes</span>
                 <span class="impact-type" id="impact1" style="color: orange; font-size: 11.5px; font-weight: 800;">Medium</span>
             </div>
                 <div class="card-footer">
@@ -224,7 +224,7 @@
 
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Chiken Meal</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Shoes</span>
                 <span class="impact-type" id="impact1" style="color: orange; font-size: 11.5px; font-weight: 800;">Medium</span>
             </div>
                 <div class="card-footer">
@@ -235,8 +235,8 @@
          </div>
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Vegetarian Meal</span>
-                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800;" >Low Impact</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Electronics</span>
+                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800;" >High Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
@@ -245,8 +245,8 @@
          </div>
           <div class="activity-card">
              <div class="card-header">
-                <span class="item-name" style="font-weight: 700; font-size: small;">Vegan Meal</span>
-                <span class="impact-type" id="impact1" style="color: green; font-size: 11.5px; font-weight: 800">High Impact</span>
+                <span class="item-name" style="font-weight: 700; font-size: small;">Plastic Packaging</span>
+                <span class="impact-type" id="impact1" style="color: red; font-size: 11.5px; font-weight: 800">High Impact</span>
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
