made changes to the log button

--- a/log.html
+++ b/log.html
@@ -72,7 +72,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
 
@@ -83,7 +83,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
 
          </div>
@@ -94,7 +94,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
           <div class="activity-card">
@@ -104,7 +104,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
     </div>
@@ -122,7 +122,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
 
@@ -133,7 +133,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
 
          </div>
@@ -144,7 +144,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
           <div class="activity-card">
@@ -154,7 +154,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
     </div>
@@ -170,7 +170,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
 
@@ -181,7 +181,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
 
          </div>
@@ -192,7 +192,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
           <div class="activity-card">
@@ -202,7 +202,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" syle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
     </div>
@@ -218,7 +218,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" sty="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
 
@@ -229,7 +229,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
 
          </div>
@@ -240,7 +240,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" stle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
           <div class="activity-card">
@@ -250,7 +250,7 @@
             </div>
                 <div class="card-footer">
                    <span class="co2-emission" id="emission1">2.5kg CO₂</span>
-                   <button class="log-btn" onclick="logUsage('White Rice')" style="background-color: rgb(237, 236, 236);">Log</button>
+                   <button class="log-btn" onclick="logUsage('White Rice')" syle="background-color: rgb(237, 236, 236);">Log</button>
                 </div>
          </div>
     </div>
