made some changes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <!-- Welcome Section -->
   <section class="preliminary">
     <div class="user-info">
-      <h2 class="welcome">Welcome back, <span id="userName">User</span> 👋</h2>
-      <p class="date" id="todayDate">Monday, July 15, 2025</p>
+      <h2 class="welcome">Welcome back, <span id="userName">Olalekan</span> 👋</h2>
+      <p class="date" id="todayDate">Monday, July 19, 2025</p>
     </div>
   </section>
 
