updated the pages

--- a/log.html
+++ b/log.html
@@ -108,6 +108,7 @@
                 </div>
          </div>
     </div>
+  
 </div>
 
 <!-- transportation -->
@@ -257,7 +258,10 @@
 </div>
 
 
-
+    <section class="food-challenge">
+        <p>Climate is changing, what about you.....</p>
+        <p>Let the world feel your Impact.....</p>
+  </section>
 
 
 
