made some changes

--- a/log.html
+++ b/log.html
@@ -108,6 +108,9 @@
                 </div>
          </div>
     </div>
+    <section class="empty-space">
+
+    </section>
    
      <section class="addition">
          <img src="images/go green.jpg" alt="" class="the-image">
