updated the logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Header -->
   <header class="dashboard-header">
-    <div class="logo">🌿 GreenScore</div>
+    <div class="logo"><img src="logo&details/1.png" alt=""></div>
     <div class="toggle-container">
       <button id="theme-toggle">🌙 Dark Mode</button>
     </div>
