--- a/community.html
+++ b/community.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-     <header class="dashboard-header">
-    <div class="logo">🌿 GreenScore</div>
+   <header class="dashboard-header">
+    <div class="logo"><img src="logo&details/1.png" alt="green score logo"></div>
     <div class="toggle-container">
-      <button id="theme-toggle">🌙 Dark Mode</button>
+      <button id="theme-toggle">🌙</button>
     </div>
   </header>
 
