--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <!-- Header -->
   <header class="dashboard-header">
-    <div class="logo"><img src="logo&details/1.png" alt=""></div>
+    <div class="logo"><img src="logo&details/1.png" alt="green score logo"></div>
     <div class="toggle-container">
-      <button id="theme-toggle">🌙 Dark Mode</button>
+      <button id="theme-toggle">🌙</button>
     </div>
   </header>
 
