completed the plan page

--- a/plan.html
+++ b/plan.html
@@ -10,13 +10,93 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-<body>
+<body class="action-body">
     <header class="dashboard-header">
     <div class="logo"><img src="logo&details/1.png" alt="green score logo"></div>
     <div class="toggle-container">
       <button id="theme-toggle">🌙</button>
     </div>
   </header>
+
+      <section class="action-section-one">
+        <h2>Your Action Plan</h2>
+        <p>Complete these challenges to increase your score</p>
+      </section>
+
+      <div class="header">
+          <h2>Weekly challenges</h2>
+      </div>
+
+       <section class="weekly-challenges" id="challengeOne">
+        <div class="plan-div-one">
+         <p class="main-text">Go meatless for 3 days</p>
+         <p class="colored-bg">Food</p>
+        </div>
+        <p class="just-here">Skip meat for 3 days to reduce your carbon footprint</p>
+        <div class="plan-div-one">
+       <span class="icon-text"> <i class="fas fa-chart-line"></i>-5kg CO₂ if completed</span>
+       <p class="total-days">1/3 days</p>
+       </div>
+        <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 30%;"></div>
+              </div>
+      </section>
+      
+
+      <section class="weekly-challenges" id="challengeTwo">
+          <div class="plan-div-one">
+         <p class="main-text">Use public transport</p>
+         <p class="colored-bg">Transport</p>
+        </div>
+        <p class="just-here">Take bus or train instead of car for your commute</p>
+        <div class="plan-div-one">
+       <span class="icon-text"> <i class="fas fa-chart-line"></i>-3.2kg CO₂ if completed</span>
+       <p class="total-days">2/5 days</p>
+       </div>
+        <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+      </section>
+      <section class="weekly-challenges" id="challengeThree">
+          <div class="plan-div-one">
+         <p class="main-text">Reduce AC usage</p>
+         <p class="colored-bg">Energy</p>
+        </div>
+        <p class="just-here">Keep your AC 2° higher than usual</p>
+        <div class="plan-div-one">
+       <span class="icon-text"> <i class="fas fa-chart-line"></i>-8kg CO₂ if completed</span>
+       <p class="total-days">3/7 days</p>
+       </div>
+        <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 45%;"></div>
+              </div>
+      </section>
+    
+      <div class="badge"><h3>Your Badges</h3></div>
+
+      <section class="badge-section">
+    <div class="first-div">
+      <div class="first-div-1">
+        <i class="fas fa-check-circle leaf-icon" ></i>
+        <p style="font-weight: 550;">Earth protector</p>
+      </div>
+      <div class="first-div-2">
+        <i class="fas fa-check-circle leaf-icon"></i> 
+        <p style="font-weight: 550;">Transport Hero</p>
+      </div>
+    </div>
+    <div class="second-div">
+      <div class="second-div-1">
+        <i class="fas fa-check-circle leaf-icon"></i> 
+        <p style="font-weight: 550;">Energy Saver</p>
+      </div>
+      <div class="second-div-2">
+        <i class="fas fa-check-circle leaf-icon"></i>
+        <p style="font-weight: 550;">Zero Waste</p>
+      </div>
+    </div>
+  </section>
+   
 
     <section class="links">
     <div>
