--- a/plan.html
+++ b/plan.html
@@ -96,6 +96,19 @@
       </div>
     </div>
   </section>
+
+  <section class="the-challenges">
+    <div class="icon-wrapper">
+      <i class="fas fa-leaf leaf-icon"></i>
+    </div>
+    <div class="ivite-text">
+     <h2>We're better Together</h2>
+      <p class="invitation-text">The biggest impact we can have is helping each other make a change in the world</p>
+    </div>
+    <div class="invite-btn">
+      <button id="invitation" class="inv-btn">Invite a Friend</button>
+    </div>
+  </section>
    
 
     <section class="links">
