made some changes

--- a/plan.html
+++ b/plan.html
@@ -103,7 +103,7 @@
     </div>
     <div class="ivite-text">
      <h2>We're better Together</h2>
-      <p class="invitation-text">The biggest impact we can have is helping each other make a change in the world</p>
+      <p class="invitation-text">You want more badges? Invite more friends to earn more badges</p>
     </div>
     <div class="invite-btn">
       <button id="invitation" class="inv-btn">Invite a Friend</button>
