made some changes

--- a/community.html
+++ b/community.html
@@ -17,8 +17,55 @@
       <button id="theme-toggle">🌙</button>
     </div>
   </header>
+     <section class="action-section-one">
+        <h2>Community</h2>
+        <p><i class="fas fa-map-marker-alt map-icon"></i> Top scores in your area</p>
+      </section>
+      <section class="weekly-challenges" id="challengeOne">
+        <div class="plan-div-one">
+         <p class="main-text"><i class="fas fa-trophy trophy-icon"></i> LeaderBoard</p>
+         <p class="colored-bg">This Week</p>
+        </div>
+      
+        <div class="individuals">
+         <p class="rank" id="1">1</p>
+         <img src="images/my photo.jpg" alt="" class="rank-img">
+          <p class="rank-text">Emma Johnson</p>
+          <p class="score1">87</p>
+        </div>
+        <div class="individuals">
+         <p class="rank" id="1">2</p>
+         <img src="images/my photo.jpg" alt="" class="rank-img">
+          <p class="rank-text">YOU</p>
+          <p class="score2">65</p>
+        </div>
+         <div class="individuals">
+         <p class="rank" id="1">3</p>
+         <img src="images/my photo.jpg" alt="" class="rank-img">
+          <p class="rank-text">The Champ</p>
+          <p class="score3">60</p>
+        </div>
+         <div class="individuals">
+         <p class="rank" id="1">4</p>
+         <img src="images/my photo.jpg" alt="" class="rank-img">
+          <p class="rank-text">Felix</p>
+          <p class="score4"> 55 </p>
+        </div>
+         <div class="individuals">
+         <p class="rank" id="1">5</p>
+         <img src="images/my photo.jpg" alt="" class="rank-img">
+          <p class="rank-text">Imade</p>
+          <p class="score5">45</p>
+        </div>
+      </section>
 
-
+      <section class="community-ranking">
+       <h3>Geo Badge</h3> 
+       <div class="community-ranking-text">
+        <p class="first-p">You're in Top 5 in Lagos</p>
+        <p class="second-p">Keep it Up to maintain your Position</p>
+       </div>
+      </section>
   <section class="links">
     <div>
         <a href="index.html" class="the-link"><i class="fas fa-home home-icon "></i>
