updated the date to be sheduled every midnight

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="preliminary">
     <div class="user-info">
       <h2 class="welcome">Welcome back, <span id="userName">Olalekan</span> 👋</h2>
-      <p class="date" id="todayDate">Monday, July 19, 2025</p>
+      <p class="date" id="date"></p>
     </div>
   </section>
 
