made some edits

--- a/community.html
+++ b/community.html
@@ -66,6 +66,8 @@
         <p class="second-p">Keep it Up to maintain your Position</p>
        </div>
       </section>
+
+      You want more badges? Invite more friends to earn more badges
   <section class="links">
     <div>
         <a href="index.html" class="the-link"><i class="fas fa-home home-icon "></i>
