made some changes

--- a/community.html
+++ b/community.html
@@ -67,7 +67,18 @@
        </div>
       </section>
 
-      You want more badges? Invite more friends to earn more badges
+       <section class="the-challenges">
+    <div class="icon-wrapper">
+      <i class="fas fa-leaf leaf-icon"></i>
+    </div>
+    <div class="ivite-text">
+     <h2>We're better Together</h2>
+      <p class="invitation-text">The biggest impact we can have is helping each other make a change in the world</p>
+    </div>
+    <div class="invite-btn">
+      <button id="invitation" class="inv-btn">Invite a Friend</button>
+    </div>
+  </section>
   <section class="links">
     <div>
         <a href="index.html" class="the-link"><i class="fas fa-home home-icon "></i>
