made some changes to the codes

--- a/community.html
+++ b/community.html
@@ -67,7 +67,7 @@
        </div>
       </section>
 
-       <section class="the-challenges">
+     <section class="the-challenges">
     <div class="icon-wrapper">
       <i class="fas fa-leaf leaf-icon"></i>
     </div>
@@ -108,6 +108,7 @@
 </div>
 
   </section>
-  <script src="app.js"></script>
+  
+  <script src="community.js"></script>
 </body>
 </html>
