updated the file structure

--- a/public/community.html
+++ b/public/community.html
@@ -6,13 +6,13 @@
   <title>GreenScore</title>
 
   <!-- External Styles -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
    <header class="dashboard-header">
-    <div class="logo"><img src="logo&details/1.png" alt="green score logo"></div>
+    <div class="logo"><img src="assets/logo&details/1.png" alt="green score logo"></div>
     <div class="toggle-container">
       <button id="theme-toggle">🌙</button>
     </div>
@@ -29,31 +29,31 @@
       
         <div class="individuals">
          <p class="rank" id="1">1</p>
-         <img src="images/my photo.jpg" alt="" class="rank-img">
+         <img src="assets/images/my photo.jpg" alt="" class="rank-img">
           <p class="rank-text">Emma Johnson</p>
           <p class="score1">87</p>
         </div>
         <div class="individuals">
          <p class="rank" id="1">2</p>
-         <img src="images/my photo.jpg" alt="" class="rank-img">
+         <img src="assets/images/my photo.jpg" alt="" class="rank-img">
           <p class="rank-text">YOU</p>
           <p class="score2">65</p>
         </div>
          <div class="individuals">
          <p class="rank" id="1">3</p>
-         <img src="images/my photo.jpg" alt="" class="rank-img">
+         <img src="assets/images/my photo.jpg" alt="" class="rank-img">
           <p class="rank-text">The Champ</p>
           <p class="score3">60</p>
         </div>
          <div class="individuals">
          <p class="rank" id="1">4</p>
-         <img src="images/my photo.jpg" alt="" class="rank-img">
+         <img src="assets/images/my photo.jpg" alt="" class="rank-img">
           <p class="rank-text">Felix</p>
           <p class="score4"> 55 </p>
         </div>
          <div class="individuals">
          <p class="rank" id="1">5</p>
-         <img src="images/my photo.jpg" alt="" class="rank-img">
+         <img src="assets/images/my photo.jpg" alt="" class="rank-img">
           <p class="rank-text">Imade</p>
           <p class="score5">45</p>
         </div>
@@ -109,6 +109,6 @@
 
   </section>
   
-  <script src="community.js"></script>
+  <script src="js/community.js"></script>
 </body>
 </html>
