--- a/public/plan.html
+++ b/public/plan.html
@@ -6,13 +6,13 @@
   <title>GreenScore</title>
 
   <!-- External Styles -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body class="action-body">
     <header class="dashboard-header">
-    <div class="logo"><img src="logo&details/1.png" alt="green score logo"></div>
+    <div class="logo"><img src="assets/logo&details/1.png" alt="green score logo"></div>
     <div class="toggle-container">
       <button id="theme-toggle">🌙</button>
     </div>
@@ -139,6 +139,6 @@
 </div>
 
   </section>
-  <script src="plan.js"></script>
+  <script src="js/plan.js"></script>
 </body>
 </html>
