--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>GreenScore</title>
 
   <!-- External Styles -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -14,7 +14,7 @@
 <body>
   <!-- Header -->
   <header class="dashboard-header">
-    <div class="logo"><img src="logo&details/1.png" alt="green score logo"></div>
+    <div class="logo"><img src="assets/logo&details/1.png" alt="green score logo"></div>
     <div class="toggle-container">
       <button id="theme-toggle">🌙</button>
     </div>
@@ -149,6 +149,6 @@
 
   <!-- Chart.js + Your Script -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
