--- a/public/login.html
+++ b/public/login.html
@@ -2,19 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Animated Signup form</title>
+  <title>Animated Login form</title>
   <link rel="stylesheet" href="css/the login style.css">
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="login-box">
-    <h2>Signup</h2>
+    <h2>Login</h2>
     <form action="#">
-      <div class="input-box">
-        <input type="text" required>
-        <label>Name</label>
-      </div>
       <div class="input-box">
         <input type="email" required>
         <label>Email</label>
@@ -23,9 +20,12 @@
         <input type="password" required>
         <label>Password</label>
       </div>
-      <button type="submit" class="btn">Create Account</button>
+      <div class="forgot-password">
+        <a href="#">Forgot Password?</a>
+      </div>
+      <button type="submit" class="btn">Login</button>
       <div class="signup-link">
-        <a href="login.html">Already have an account? Login</a>
+        <a href="index.html">Signup</a>
       </div>
     </form>
   </div>
@@ -82,6 +82,6 @@
   <span style="--i:49;"></span>
 </div>
 <!-- partial -->
-
+  
 </body>
 </html>
