--- a/public/index.html
+++ b/public/index.html
@@ -1,87 +1,83 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Animated Signup form</title>
-  <link rel="stylesheet" href="css/the login style.css">
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="container">
-  <div class="login-box">
-    <h2>Signup</h2>
-    <form action="#">
-      <div class="input-box">
-        <input type="text" required>
-        <label>Name</label>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login/Signup Form | @coding.stella</title>
+    <link rel="stylesheet" href="css/the login style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="form-box login">
+        <form action="#">
+          <h1>Login</h1>
+          <div class="input-box">
+            <input type="text" placeholder="Username" required />
+            <i class="bx bxs-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="password" placeholder="Password" required />
+            <i class="bx bxs-lock-alt"></i>
+          </div>
+          <div class="forgot-link">
+            <a href="#">Forgot Password?</a>
+          </div>
+          <button type="submit" class="btn">Login</button>
+          <p>or login with social platforms</p>
+          <div class="social-icons">
+            <a href="#"><i class="bx bxl-google"></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+          </div>
+        </form>
       </div>
-      <div class="input-box">
-        <input type="email" required>
-        <label>Email</label>
-      </div>
-      <div class="input-box">
-        <input type="password" required>
-        <label>Password</label>
-      </div>
-      <button type="submit" class="btn">Create Account</button>
-      <div class="signup-link">
-        <a href="login.html">Already have an account? Login</a>
-      </div>
-    </form>
-  </div>
 
-  <span style="--i:0;"></span>
-  <span style="--i:1;"></span>
-  <span style="--i:2;"></span>
-  <span style="--i:3;"></span>
-  <span style="--i:4;"></span>
-  <span style="--i:5;"></span>
-  <span style="--i:6;"></span>
-  <span style="--i:7;"></span>
-  <span style="--i:8;"></span>
-  <span style="--i:9;"></span>
-  <span style="--i:10;"></span>
-  <span style="--i:11;"></span>
-  <span style="--i:12;"></span>
-  <span style="--i:13;"></span>
-  <span style="--i:14;"></span>
-  <span style="--i:15;"></span>
-  <span style="--i:16;"></span>
-  <span style="--i:17;"></span>
-  <span style="--i:18;"></span>
-  <span style="--i:19;"></span>
-  <span style="--i:20;"></span>
-  <span style="--i:21;"></span>
-  <span style="--i:22;"></span>
-  <span style="--i:23;"></span>
-  <span style="--i:24;"></span>
-  <span style="--i:25;"></span>
-  <span style="--i:26;"></span>
-  <span style="--i:27;"></span>
-  <span style="--i:28;"></span>
-  <span style="--i:29;"></span>
-  <span style="--i:30;"></span>
-  <span style="--i:31;"></span>
-  <span style="--i:32;"></span>
-  <span style="--i:33;"></span>
-  <span style="--i:34;"></span>
-  <span style="--i:35;"></span>
-  <span style="--i:36;"></span>
-  <span style="--i:37;"></span>
-  <span style="--i:38;"></span>
-  <span style="--i:39;"></span>
-  <span style="--i:40;"></span>
-  <span style="--i:41;"></span>
-  <span style="--i:42;"></span>
-  <span style="--i:43;"></span>
-  <span style="--i:44;"></span>
-  <span style="--i:45;"></span>
-  <span style="--i:46;"></span>
-  <span style="--i:47;"></span>
-  <span style="--i:48;"></span>
-  <span style="--i:49;"></span>
-</div>
-<!-- partial -->
+      <div class="form-box register">
+        <form action="#">
+          <h1>Registration</h1>
+          <div class="input-box">
+            <input type="text" placeholder="Username" required />
+            <i class="bx bxs-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="email" placeholder="Email" required />
+            <i class="bx bxs-envelope"></i>
+          </div>
+          <div class="input-box">
+            <input type="password" placeholder="Password" required />
+            <i class="bx bxs-lock-alt"></i>
+          </div>
+          <button type="submit" class="btn">Register</button>
+          <p>or register with social platforms</p>
+          <div class="social-icons">
+            <a href="#"><i class="bx bxl-google"></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+          </div>
+        </form>
+      </div>
 
-</body>
+      <div class="toggle-box">
+        <div class="toggle-panel toggle-left">
+          <h1>Hello, Welcome!</h1>
+          <p>Don't have an account?</p>
+          <button class="btn register-btn">Register</button>
+        </div>
+
+        <div class="toggle-panel toggle-right">
+          <h1>Welcome Back!</h1>
+          <p>Already have an account?</p>
+          <button class="btn login-btn">Login</button>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/login.js"></script>
+  </body>
 </html>
