updated the sign up page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login/Signup Form | @coding.stella</title>
+    <title>Login/Signup Form | GreenScoreapp</title>
     <link rel="stylesheet" href="css/the login style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -31,7 +31,7 @@
           <div class="social-icons">
             <a href="#"><i class="bx bxl-google"></i></a>
             <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
             <a href="#"><i class="bx bxl-linkedin"></i></a>
           </div>
         </form>
@@ -62,9 +62,9 @@
           </div>
         </form>
       </div>
-
+       
       <div class="toggle-box">
-        <div class="toggle-panel toggle-left">
+        <div class="toggle-panel toggle-left">    
           <h1>Hello, Welcome!</h1>
           <p>Don't have an account?</p>
           <button class="btn register-btn">Register</button>
