worked on user sign in and authentication

--- a/public/report.html
+++ b/public/report.html
@@ -18,6 +18,8 @@
     </div>
   </header>
 
+  <button><a href="https://us-east-1xw4lugldc.auth.us-east-1.amazoncognito.com/login?client_id=68ea3udqj0n9pd5eufmkrgd9d9&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Folalekanogundimu-4om9.vercel.app%2F">click me</a></button>
+
   <section class="links">
     <div>
         <a href="index.html" class="the-link"><i class="fas fa-home home-icon "></i>
